// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GovBanner component static content renders consistently in English for .gov sites 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock ( 
                <span
                  className="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-description"
                    className="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description"
                    >
                      Locked padlock icon
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
                 )
              </strong>
               or 
              <strong>
                https://
              </strong>
               
              means you’ve safely connected to the 
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in English for .mil sites 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .mil
              </strong>
              <br />
              A 
              <strong>
                .mil
              </strong>
               website belongs to an official U.S. Department of Defense organization.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .mil websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock ( 
                <span
                  className="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-description"
                    className="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description"
                    >
                      Locked padlock icon
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
                 )
              </strong>
               or 
              <strong>
                https://
              </strong>
               
              means you’ve safely connected to the 
              .mil
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in Spanish for .gov sites 1`] = `
<section
  aria-label="Un sitio oficial del Gobierno de Estados Unidos"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .gov
              </strong>
              <br />
              Un sitio web 
              <strong>
                .gov
              </strong>
               pertenece a una organización oficial del Gobierno de Estados Unidos.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .gov usan HTTPS
              </strong>
              <br />
              Un 
              <strong>
                candado ( 
                <span
                  className="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-description"
                    className="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description"
                    >
                      Locked padlock icon
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
                 )
              </strong>
               o 
              <strong>
                https://
              </strong>
               
              significa que usted se conectó de forma segura a un sitio web 
              .gov
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in Spanish for .mil sites 1`] = `
<section
  aria-label="Un sitio oficial del Gobierno de Estados Unidos"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .mil
              </strong>
              <br />
              Un sitio web 
              <strong>
                .mil
              </strong>
               pertenece a una organización oficial del Departamento de Defensa de EE. UU.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .mil usan HTTPS
              </strong>
              <br />
              Un 
              <strong>
                candado ( 
                <span
                  className="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-description"
                    className="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description"
                    >
                      Locked padlock icon
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
                 )
              </strong>
               o 
              <strong>
                https://
              </strong>
               
              significa que usted se conectó de forma segura a un sitio web 
              .mil
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently with default props 1`] = `
<section
  aria-label="Official website of the United States government"
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
        data-testid="banner-header-inner-div"
      >
        <div
          className="grid-col-auto"
          data-testid="banner-header-flag-div"
        >
          <img
            alt=""
            aria-hidden={true}
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          aria-hidden={true}
          className="grid-col-fill tablet:grid-col-auto"
          data-testid="banner-header-grid-div"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock ( 
                <span
                  className="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-description"
                    className="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description"
                    >
                      Locked padlock icon
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
                 )
              </strong>
               or 
              <strong>
                https://
              </strong>
               
              means you’ve safely connected to the 
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
